# hmp3-ng

./: .travis.yml  Base.hs  Binary.hs  Config.hs  Core.hs  Curses.hsc  DLists.hs  Decoder.hs  Elements.hs  FastIO.hs  FastMutInt.lhs  Keyboard.hs  Keymap.hs  Keymap.hs-boot  Lexer.hs  Lexers.hs  Main.hs  Makefile  POpen.hs  Playlist.hs  README  README.md  Regex.hsc  Setup.hs  Setup.lhs  State.hs  Style.hs  Syntax.hs  TODO  Text.hs  Tree.hs  UI.hs  Utils.hs  Width.hs  cabal.project  config.status  configure  configure.ac  hmp3-ng.cabal  hmp3.cabal  (+2 more)
.github/workflows/: haskell.yml
app/: Main.hs
cbits/: config.h.in  curses.h  hooks.c  mycurses.h  utils.c  utils.h
test/: BaseSpec.hs  ConfigSpec.hs  CoreSpec.hs  DecoderSpec.hs  ElementsSpec.hs  FastIOSpec.hs  KeymapSpec.hs  LexerSpec.hs  Main.hs  PlaylistSpec.hs  StyleSpec.hs  TextSpec.hs  TreeSpec.hs  WidthSpec.hs
