name:                hmp3-ng
version:             2.2.0
homepage:            https://github.com/galenhuntington/hmp3-ng
license:             GPL
license-file:        LICENSE
author:              Don Stewart, Galen Huntington
maintainer:          Galen Huntington
category:            Sound
synopsis:            A 2019 fork of an ncurses mp3 player written in Haskell
description:
    An mp3 player with a curses frontend. Playlists are populated by
    passing directory names on the commandline, and saved to the
    ~/.hmp3db database. Type 'h' to display the help page.  Colours may
    be configured at runtime by editing the "~/.hmp3" file.
cabal-version:       >= 1.2
build-type:          Configure
extra-source-files:  Keymap.hs-boot README.md TODO configure configure.ac
                     cbits/config.h.in ./cbits/utils.h ./cbits/utils.c

executable hmp3
    build-depends:     unix >= 2.7,
                       zlib >= 0.4,
                       binary >= 0.4,
                       pcre-light >= 0.3,
                       mersenne-random >= 1.0.0.1,
                       base >= 4,
                       bytestring >= 0.10,
                       containers,
                       array,
                       old-time,
                       directory,
                       process,
                       utf8-string

    ghc-options:         -Wall -funbox-strict-fields -threaded -Wno-unused-do-bind
    main-is:             Main.hs
    other-modules:       Curses Config Core FastIO Keymap
                         Lexer Lexers State Style Syntax Tree UI Utils
                         Paths_hmp3_ng

    extensions:          CPP, ForeignFunctionInterface, ScopedTypeVariables
    extra-libraries:     curses
    include-dirs:        cbits
    c-sources:           cbits/utils.c
