Name:                hmp3
Version:             0.1
License:             GPL
Author:              Don Stewart
Maintainer:          dons@cse.unsw.edu.au
Build-Depends:       base, unix

Executable:          hmp3
Main-is:             Main.hs
extensions:          CPP, ForeignFunctionInterface
include-dirs:        cbits
c-sources:           cbits/utils.c
ghc-options:         -Wall -fglasgow-exts -O -funbox-strict-fields -Icbits -threaded -lncurses
other-modules:       Curses
