Name:                hmp3
Version:             0.1
License:             GPL
License-file:        LICENSE
Author:              Don Stewart
Maintainer:          dons@cse.unsw.edu.au
Build-Depends:       base, unix, fps

Executable:          hmp3
Main-is:             Main.hs
extensions:          CPP, ForeignFunctionInterface
include-dirs:        cbits
c-sources:           cbits/utils.c cbits/hooks.c
other-modules:       Curses Regex
ghc-options:         -Wall -fglasgow-exts -O2 -funbox-strict-fields -fasm -optl-Wl,-s -Icbits -threaded -lcurses
 
-- ghc-options:         -Wall -fglasgow-exts -O2 -funbox-strict-fields -fvia-C -optc-O3 -optl-Wl,-s -Icbits -threaded -lncurses
-- ghc-options:         -prof -auto-all -Wall -fglasgow-exts -O2 -optc-O3 -funbox-strict-fields -Icbits -threaded -lncurses
-- ghc-options:         -Wall -fglasgow-exts -Onot -Icbits -threaded -lncurses
